[package]
name = "gen_markov"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
env_logger = "0.10.0"
lindera = "0.27.1"
lindera-core = "0.27.1"
lindera-dictionary = { version = "0.27.1", features = ["ipadic"] }
lindera-tokenizer = { version = "0.27.1", features = ["ipadic"] }
markov = "1.1.0"
once_cell = "1.18.0"
regex = "1.10.2"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["full"] }
